# qjsonrpc

./: CMakeLists.txt
libsrc/: qjsonrpc.pri  qjsonrpc.pro
libsrc/libQJsonRPC/: qjsonrpchttpserver.cpp  qjsonrpcservice.cpp
